<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/general_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_string"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:hint="@string/username_edit_text_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label_string"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:hint="@string/password_edit_text_hint"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/general_margin"
        android:background="@android:color/holo_green_dark"
        android:text="@string/submit_button_string"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username_details_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/password_details_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>